--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
     <groupId>org.buzzer.sqlbuilder</groupId>
     <artifactId>buzzer-sqlbuilder</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <properties>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-    </properties>
+<!--    <properties>-->
+<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
+<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
+<!--    </properties>-->
 
     <dependencies>
         <dependency>
@@ -34,5 +34,18 @@
 
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
