--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.10.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
 
 
     </dependencies>
